[gd_scene load_steps=45 format=2]

[ext_resource path="res://Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mario.gd" type="Script" id=2]
[ext_resource path="res://art/master-sheet-1024.png" type="Texture" id=3]
[ext_resource path="res://audio/sm64_mario_hoo.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sm64_mario_hoohoo.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sm64_mario_waha.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 70, 70, 0, 0, 0, 0, 530, 70, 0, 0, 0, 0, 530, 530, 0, 0, 0, 0, 70, 530, 0, 0, 0, 0, 70, 70 )
}

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 224, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 352, 70, 32, 35 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 108, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 135, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 162, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 189, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 243, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 270, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 297, 35, 27, 35 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 136, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 170, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 204, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 238, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 272, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 306, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 340, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 374, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 408, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 442, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 476, 108, 34, 36 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 135, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 162, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 189, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 243, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 270, 0, 27, 35 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 297, 0, 27, 35 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "right",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "up",
"speed": 15.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "throw",
"speed": 20.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "down",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=38]

[node name="Mario" type="Area2D"]
scale = Vector2( 5, 5 )
script = ExtResource( 2 )
speed = 0.2
projectile_scene = ExtResource( 1 )

[node name="Path" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="Location" type="PathFollow2D" parent="Path"]
position = Vector2( 70, 70 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 37 )
animation = "throw"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 38 )

[node name="Hoo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HooHoo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Waha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ThrowOrigin" type="Position2D" parent="."]
position = Vector2( 0, -1.344 )

[node name="ThrowTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_MarioTimer_timeout"]
[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
